syntax = "proto3";

package kamereo.hiring_test;

option java_package = "vn.kamereo.hiring_test";
option java_outer_classname = "PromotionServiceProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message Promotion {
    string code = 1;
    int64 discount_price = 2;
    // inclusive, formatted in ISO-8601
    string valid_period_start = 3;
    // exclusive, formatted in ISO-8601
    string valid_period_end = 4;
}

message GetPromotionRequest {
    string user_id = 1;
    string promotion_code = 2;
}

message GetPromotionResponse {
    Promotion promotion = 1;
}

service PromotionService {
    rpc GetPromotion (GetPromotionRequest) returns (GetPromotionResponse);
}
